# lib/db/src/schema/index.ts
@@ -20,3 +20,4 @@
 export * from "./leads";
 export * from "./products";
 export * from "./orders";
+export * from "./contacts";
